openoffice-base-devel - 2.4_src680_m239-1
- removed internal-no-db patch
- fixed jvmfwk/gstreamer patches

openoffice-base-devel - 2.4_src680_m238-1
- fixed fonthinting patch

openoffice-base-devel - 2.4_src680_m236-1
- removed 2 patches that went upstream
- fixed smp build issues

openoffice-base-devel - 2.4_src680_m235-1
- switched to build with internal icu due to 
  http://www.openoffice.org/issues/show_bug.cgi?id=83146
- added pstoedit depenency to fix #8390
- removed ccache from makedeps

openoffice-base-devel - 2.4_src680_m234-1
- fixed weird gtk behavior - http://bugs.archlinux.org/task/8209
- removed system agg dependency due to license issues 
  see http://www.openoffice.org/issues/show_bug.cgi?id=81224
- update to src680_m234
- added changelog