@@ -2,24 +2,26 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-devel
-pkgver=2.4_src680_m239
+pkgver=3.0_dev300_m10
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
-_OO_milestone=src680-m239
-#_OO_milestone=SRC680_m239
-license=('LGPL')
+#_OO_milestone=dev300-m10
+_OO_milestone=DEV300_m10
+license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
-depends=('ttf-dejavu' 'curl' 'desktop-file-utils' 'fontconfig>=2.4' 'gtk2>=2.10.11'
-         'hunspell>=1.1.5' 'perl' 'python>=2.5' 'libwpd' 'libsndfile'
+depends=('ttf-dejavu' 'curl' 'desktop-file-utils' 'fontconfig>=2.5' 'gtk2>=2.12.7'
+         'hunspell>=1.2.2-2' 'perl' 'python>=2.5.1' 'libwpd' 
          'startup-notification>=0.9' 'xalan-java' 'libxaw' 'libcups' 'hsqldb-java'
-         'gstreamer0.10-base' 'neon>=0.27.0' 'dbus-glib' 'nss' 'pstoedit') # 'xmlsec' - broken # "icu>=3.8" broken
+         'neon>=0.28.2' 'dbus-glib' 'nss' 'pstoedit') #'libsndfile'
+	# 'xmlsec' - broken # "icu>=3.8" broken
+	#'gstreamer0.10-base' 
 # for gnu java/ecj
 makedepends=('bison' 'cvs' 'curl' 'findutils'
              'flex' 'gawk' 'gcc-libs' 'kdelibs' 'libart-lgpl' 'pam' 'sane' 'zip'
              'perl-archive-zip' 'pkgconfig'  'unzip' 'xulrunner>=1.8.1.3'
-             'java-gcj-compat' 'apache-ant' 'cairo')	# 'boost' - we use internal one. jfreereport is broken
+             'java-gcj-compat' 'apache-ant' 'cairo' 'gperf')	# 'boost' - we use internal one. jfreereport is broken
 # for SUN Java
 #makedepends=('boost' 'bison' 'cvs' 'curl' 'findutils'
 #             'flex' 'gawk' 'gcc-libs' 'kdelibs' 'libart-lgpl' 'pam' 'sane' 'zip'
@@ -27,56 +29,45 @@ makedepends=('bison' 'cvs' 'curl' 'findutils'
 #             'jdk' 'apache-ant' 'cairo')
 provides=('openoffice-base')
 
-#MIRROR="ftp://ftp.gwdg.de/pub/openoffice/" # has all late but is fast
-#MIRROR=http://ftp.rz.tu-bs.de/pub/mirror/OpenOffice.org/
+#MIRROR=ftp://ftp.gwdg.de/pub/openoffice # has all late but is fast
+#MIRROR=http://ftp.rz.tu-bs.de/pub/mirror/OpenOffice.org
 #MIRROR=ftp://ftp-1.gwdg.de/pub/openoffice/developer
-#MIRROR=ftp://ftp.linux.cz/pub/localization/OpenOffice.org/
-MIRROR=http://download.go-oo.org/SRC680
+MIRROR=ftp://ftp.linux.cz/pub/localization/OpenOffice.org/devel/build/Sources/
+#MIRROR=http://download.go-oo.org/DEV300
 
-source=(#$MIRROR/stable/${pkgver}/OOo_${pkgver}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/contrib/rc/${pkgver}/OOo_${pkgver}_${_OO_milestone}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/contrib/rc/${pkgver}/OOo_${_OO_milestone}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/contrib/rc/2.2.0rc3/OOo_${pkgver}rc3_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/contrib/rc/2.2.0rc4/OOo_${pkgver}rc4_${_OO_milestone}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/stable/${pkgver}/OOo_${pkgver}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/devel/build/Sources/OOo_${pkgver}_src_{core,binfilter,system}.tar.bz2
-	#$MIRROR/SRC680_m223/OOo-Dev_SRC680_m224_src_{core,binfilter,system}.tar.bz2
-	$MIRROR/${_OO_milestone}-{core,binfilter,system}.tar.bz2
-	intro.bmp
+source=(#$MIRROR/${_OO_milestone}-{core,binfilter,system}.tar.bz2
+	$MIRROR/OOo_${_OO_milestone}_source.tar.gz
 	template.desktop
-	default-no-startup-wizard_oog680_m1.diff
-	default-system-fpicker_oog680_m1.diff
-	jvmfwk-gij-paths_src239.diff
-	gstreamer-support_src239.diff
-	fix-font-hinting_src237.diff
-	fix-invisible-text.diff
-	gui-insensitive_oog680_m2.diff
-	ucb-no-CURL_NO_OLDIES_oog_m5.diff
-	libxmlsec-system-nss_oog_m5.diff
-	libxmlsec-findcerts_oog_m5.diff
-	soffice-detect-mozilla-certificates_oog_m5.diff
-	detect_db46_src233.diff
+	default-no-startup-wizard.diff
+	default-system-fpicker.diff
+	jvmfwk-gij-paths.diff
+	gui-insensitive.diff
+	libxmlsec-system-nss.diff
+	libxmlsec-findcerts.diff
+	soffice-detect-mozilla-certificates.diff
+	gtkunixprintdialog.diff
+	soffice.diff
+	buildfix-xmlhelp-system-expat.diff
+	cairo-buildfix.diff
+	fixupsystem-hunspell.patch
 	#http://oooconv.free.fr/fontooo/FontOOo.sxw
 	FontOOo_1.7.1.sxw # from http://www.openoffice.org/issues/show_bug.cgi?id=81102
 	awt_x86_64.diff)
-options=('!distcc' '!ccache' '!strip')
-md5sums=('2d9cf56696059b3974788776aad1bcb8'
-         'a6c68c66790983504346e00841ef96f5'
-         '60ad3ec530bf7251e3cc809e154a9396'
-         '72dba5b4cd94d4439e06f75769402c6f'
-         'a728dcd463c1aa7ca5db75146377a0d1'
+options=('!distcc' '!ccache')
+md5sums=('2bcedcdd487319ec601aaf71114f614a'
+         '50f1b6923deb05756de0efa02c5a63e0'
          '0faab33566196ddc9c405d68cf614663'
          '39e4c1b1e864b22ee4650b2bff44c695'
-         '2c91ba49857c5131ab455dbff9eca324'
-         'b6ff61803ac5b759f6b8c33afadbdc72'
-         '939a58f5c516bfbe2d71a3f383b1cc98'
-         '509697a7da6508ac9377b7750a57bfc4'
+         '8980e21cef021d050ab1d4a13c85eb08'
          '4c76c07e867d51c416ea258220a90a6a'
-         '135f1b3c837435de504c84e4db9dc4f7'
-         '7fadadecaf511bb118bc1b657192520a'
+         '28f37939e38d22bb3feaac8d17215673'
          'a8b96e9d0ce92a8f6690f277b1cfacc9'
-         '4271702d6e9e912b663d3e2d9b8a17e8'
-         'cd8ff2b60ee86f576a1e04bac8dcb51b'
+         '1dc7480a04f572ad136d35923a2af66d'
+         '113bd820936e9e81f4f86e31be7b9c5b'
+         '44174ef4e71ba835fcd2a59733213cc9'
+         '3adf8d08dd91203f4fce0502f2a491ff'
+         '5421bcba1012e0a887f770262af83ce2'
+         '3f1eedb6a6f4fbed7c09f4dce7e2e96b'
          '1fc1ca5205730655eab2d2e119aa06fe'
          '83bb5e235c4e4062eed404829d760c14')
 
@@ -87,53 +78,50 @@ build() {
 	unset J2REDIR; unset J2SDKDIR; unset JAVA_HOME; unset CLASSPATH
 	[ -z "${JAVA_HOME}" ] && . /etc/profile.d/java-gcj-compat.sh
 	JAVAHOME=${JAVA_HOME}
-	[ -z "${QTDIR}" ] && . /etc/profile.d/qt.sh
+	[ -z "${QTDIR}" ] && . /etc/profile.d/qt3.sh
 	[ -z "${KDEDIR}" ] && . /etc/profile.d/kde.sh
 	[ -z "${MOZ_PLUGIN_PATH}" ] && . /etc/profile.d/mozilla-common.sh
 #	[ -z "${JAVA_HOME}" ] && . /etc/profile.d/jdk.sh
 
-	cd $startdir/src/${_OO_milestone}/
+	#cd $startdir/src/${_OO_milestone}/
+	cd $startdir/src/ooo_${_OO_milestone}_src/
 
 	# build fixes
 	# gcj build fix to find our gcj libs paths
-	patch -Np0 -i ../jvmfwk-gij-paths_src239.diff || return 1
-	# fix build with internal xmlsec
-	patch -Np0 -i ../libxmlsec-system-nss_oog_m5.diff || return 1
-	# detect new db4.6
-	patch -Np0 -i ../detect_db46_src233.diff || return 1
+	patch -Np0 -i ../jvmfwk-gij-paths.diff || return 1
+	patch -Np0 -i ../buildfix-xmlhelp-system-expat.diff || return 1
+	patch -Np0 -i ../cairo-buildfix.diff || return 1
+	pushd lingucomponent
+	patch -Np0 -i ../../fixupsystem-hunspell.patch || return 1
+	popd
 
 	# allows xmlsec to be able to read the format of the digital certificates.
-	patch -Np0 -i ../libxmlsec-findcerts_oog_m5.diff || return 1
+	patch -Np0 -i ../libxmlsec-findcerts.diff || return 1
 	# allows soffice to find the user's firefox profile so that it can read
 	# his digital certificates. Nss stores digital certificates in your mozilla firefox profile. 
-	patch -Np0 -i ../soffice-detect-mozilla-certificates_oog_m5.diff || return 1
+	patch -Np0 -i ../soffice-detect-mozilla-certificates.diff || return 1
 
 	# important bugfixes
-	# fix for invisible text with gcc 4.2 http://www.openoffice.org/issues/show_bug.cgi?id=78417
-	patch -Np0 -i ../fix-invisible-text.diff || return 1
+	# nothing right now :)
 
-	# fix font hinting
-	patch -Np0 -i ../fix-font-hinting_src237.diff || return 1
 	# this heavily improves the looks of disabled icons in OpenOffice toolbar. 
-	patch -Np0 -i ../gui-insensitive_oog680_m2.diff || return 1
+	patch -Np0 -i ../gui-insensitive.diff || return 1
 
 	# remove the startup wizard
-	patch -Np0 -i ../default-no-startup-wizard_oog680_m1.diff || return 1
+	patch -Np0 -i ../default-no-startup-wizard.diff || return 1
 	# enables the default system-file-picker in case we have that built
-	patch -Np0 -i ../default-system-fpicker_oog680_m1.diff || return 1
+	patch -Np0 -i ../default-system-fpicker.diff || return 1
 
-	# add gstreamer support for play audio in presentations
-	patch -Np0 -i ../gstreamer-support_src239.diff || return 1
+	# add gtkprint dialog for gtk environment
+#	patch -Np0 -i ../gtkunixprintdialog.diff || return 1
 
 	# arch related fixes & configure options
 	if [ "$CARCH" = "i686" ]; then
 	  EXTRAOPTS="--with-arch=x86 "
-	  SMP=1
 	fi
 
 	if [ "$CARCH" = "x86_64" ]; then
 	  EXTRAOPTS="--with-arch=x86_64"
-	  SMP=6
           # fixes to build with SUN jdk/jre
           # http://qa.openoffice.org/issues/show_bug.cgi?id=74749
 	 # sed -i "s:lib64\/libjpeg.so:lib\/libjpeg.so:g" $startdir/src/${_OO_milestone}/solenv/inc/libs.mk
@@ -141,7 +129,8 @@ build() {
 	 # patch -Np0 -i ../awt_x86_64.diff || return 1
 	fi
 
-	cd $startdir/src/${_OO_milestone}/config_office
+	#cd $startdir/src/${_OO_milestone}/config_office
+	cd $startdir/src/ooo_${_OO_milestone}_src/config_office
 
 	# Set OOO_VENDOR in build environment
 	export OOO_VENDOR="ArchLinux"
@@ -212,6 +201,7 @@ build() {
 	--with-use-shell=bash\
 	 $EXTRAOPTS || return 1
 
+#	--stoponerror\ # should work from m8 but configure doesn't know about it
 #	--with-system-icu\
 
 	cd ..
@@ -227,7 +217,7 @@ build() {
 
 	# to compile with SMP add -P2 or above, remove any -Px if your cou has only one core or if you want to fix it for non smp build
 	cd instsetoo_native
-	build.pl -P${SMP} --all || return 1
+	build.pl -P6 --all || return 1
 	cd ..
 
 	# install binaries
@@ -236,12 +226,23 @@ build() {
 	 else 	cp -R instsetoo_native/unxlngi6.pro/OpenOffice/native/install/en-US/linux-2.6-intel/buildroot/* $startdir/pkg/
 	fi
 
-	cd $startdir/pkg/opt
-	mv openoffice.org2.4 openoffice
+	cd $startdir/pkg/opt/
 
-	# replace original splash intro screen with one provided by shastry
-	rm -rf $startdir/pkg/opt/openoffice/program/intro.bmp
-	install -D -m644 $startdir/src/intro.bmp $startdir/pkg/opt/openoffice/program/
+       ## Step 1 
+       cd $startdir/pkg/opt/openoffice.org || return 1
+       mv ure/ basis3.0/ || return 1
+       cd basis3.0 || return 1
+       rm ure-link && mv ure ure-link || return 1
+       ## Step 2
+       cd $startdir/pkg/opt/ || return 1
+       mv openoffice.org/basis3.0/ openoffice.org3/ || return 1
+       cd openoffice.org3/ || return 1
+       rm basis-link && mv basis3.0 basis-link || return 1
+       ## Step 3        
+       cd $startdir/pkg/opt/ || return 1
+       rmdir $startdir/pkg/opt/openoffice.org || return 1
+       mv openoffice.org3 openoffice || return 1
+
 
 	# prepare filesystem entries
 	mkdir -p $startdir/pkg/usr/{bin,share/applications}
@@ -255,7 +256,7 @@ build() {
 	# install shortcuts
 	cp $startdir/pkg/opt/openoffice/share/xdg/*.desktop  $startdir/pkg/usr/share/applications
 	cd $startdir/pkg/usr/share/applications
-	sed -i -e 's|Exec=openoffice.org2.4|Exec=/opt/openoffice/program/soffice|g' *.desktop
+	sed -i -e 's|Exec=openoffice.org3.0|Exec=/opt/openoffice/program/soffice|g' *.desktop
 	sed -i -e 's|Exec=/opt/openoffice/program/soffice-printeradmin|Exec=/opt/openoffice/program/spadmin|g' printeradmin.desktop
 	# fix exec commands in shortcuts for Xfce menu
 	sed -i -e 's|base %U|base|g' base.desktop
@@ -267,12 +268,13 @@ build() {
 	# remove quickstarter, we disabled it above
 	rm -rf $startdir/pkg/usr/share/applications/qstart.desktop
 	# fix icons in shortcuts
-	sed -i -e 's|Icon=openofficeorg23-|Icon=|g' *.desktop
+	sed -i -e 's|Icon=openofficeorg30-|Icon=|g' *.desktop
 	# add template desktop file
 	install -D -m644 $startdir/src/template.desktop $startdir/pkg/usr/share/applications/template.desktop
 
 	# install icons
-	cd $startdir/src/${_OO_milestone}/sysui/desktop/icons
+#	cd $startdir/src/${_OO_milestone}/sysui/desktop/icons
+	cd $startdir/src/ooo_${_OO_milestone}_src/sysui/desktop/icons
 	cp -a -v HighContrast/*x* $startdir/pkg/usr/share/icons/HighContrast
 	cp -a -v hicolor/*x* $startdir/pkg/usr/share/icons/hicolor
 	cp -a -v locolor/*x* $startdir/pkg/usr/share/icons/locolor
@@ -288,33 +290,30 @@ build() {
 	# some cleanup
 	find $startdir/pkg/usr/share/icons -depth -name "CVS" -type d -exec rm -r {} \; > /dev/null 2>&1
 	rm -f $startdir/pkg/opt/openoffice/program/oo_product.bmp
-	touch $startdir/pkg/opt/openoffice/share/dict/ooo/.directory
-	touch $startdir/pkg/opt/openoffice/presets/template/.directory
+	touch $startdir/pkg/opt/openoffice/basis-link/share/dict/ooo/.directory 
+	touch $startdir/pkg/opt/openoffice/basis-link/presets/template/.directory 
 	touch $startdir/pkg/opt/openoffice/share/extension/install/.directory
-	rmdir $startdir/pkg/opt/openoffice/program/{addin,plugin}
-	rmdir $startdir/pkg/opt/openoffice/presets/psprint/{driver,fontmetric}
-	rmdir $startdir/pkg/opt/openoffice/presets/uno_packages/cache
-	rmdir $startdir/pkg/opt/openoffice/presets/{autocorr,store,Scripts,wordbook,backup,temp,psprint,uno_packages}
-	rm -rf $startdir/pkg/opt/openoffice/share/uno_packages
 	# remove unecessary temp files if they exist 
 	rm -f  $startdir/pkg/opt/openoffice/program/root*.dat
 	rm -f  $startdir/pkg/opt/openoffice/program/root*.dat.*
 
-	# fix font wizard not installed by default (from http://qa.openoffice.org/issues/show_bug.cgi?id=81102)
+ 	# fix font wizard not installed by default (from http://qa.openoffice.org/issues/show_bug.cgi?id=81102)
 	install -D -m644 $startdir/src/FontOOo_1.7.1.sxw $startdir/pkg/opt/openoffice/share/dict/ooo/FontOOo.sxw
 
 	# add missing spell wizard
-	install -D -m644 $startdir/src/${_OO_milestone}/dictionaries/diclst/DicOOo.sxw $startdir/pkg/opt/openoffice/share/dict/ooo/DicOOo.sxw
+# install -D -m644 $startdir/src/${_OO_milestone}/dictionaries/diclst/DicOOo.sxw $startdir/pkg/opt/openoffice/share/dict/ooo/DicOOo.sxw
+	install -D -m644 $startdir/src/ooo_${_OO_milestone}_src/dictionaries/diclst/DicOOo.sxw $startdir/pkg/opt/openoffice/share/dict/ooo/DicOOo.sxw
 
 	# link the mozilla-plugin
-	mkdir -p $startdir/pkg/opt/mozilla/lib/plugins/
-	cd $startdir/pkg/opt/mozilla/lib/plugins/
-	ln -v -s ../../../openoffice/program/libnpsoplugin.so .
+	mkdir -p $startdir/pkg/usr/lib/mozilla/plugins/
+	cd $startdir/pkg/usr/lib/mozilla/plugins/
+	ln -v -s /opt/openoffice/program/libnpsoplugin.so .
 
 	## Develize it!
 	cd $startdir/pkg/opt/
 	mv openoffice openoffice-dev
 	sed -i -e 's|Exec=/opt/openoffice/program|Exec=/opt/openoffice-dev/program|g' $startdir/pkg/usr/share/applications/*.desktop
+#	sed -i -e 's|Icon=dev-openoffice30|Icon=dev|g' $startdir/pkg/usr/share/applications/*.desktop
 
 	cd $startdir/pkg/usr/bin
 	rm -f soffice spadmin
@@ -330,9 +329,13 @@ build() {
 	
 	cd $startdir/pkg/usr/share/applications/
 	sed -i -e 's|Icon=|Icon=dev-|g' $startdir/pkg/usr/share/applications/*.desktop
-	sed -i -e 's|OpenOffice\.org\ 2\.3|OpenOffice\.org\ devel|g' $startdir/pkg/usr/share/applications/*.desktop
+	sed -i -e 's|OpenOffice\.org\ 3\.0|OpenOffice\.org\ devel|g' $startdir/pkg/usr/share/applications/*.desktop
 	sed -i -e 's|\/opt\/openoffice\-dev\/program\/soffice|\/usr\/bin\/soffice\-dev|g' $startdir/pkg/usr/share/applications/*.desktop
 
 	mv $startdir/pkg/opt/openoffice-dev/program/soffice.bin $startdir/pkg/opt/openoffice-dev/program/soffice-dev.bin
-	mv $startdir/pkg/opt/mozilla/lib/plugins/libnpsoplugin.so $startdir/pkg/opt/mozilla/lib/plugins/libnpsoplugin-dev.so
+	mv $startdir/pkg/usr/lib/mozilla/plugins/libnpsoplugin.so $startdir/pkg/usr/lib/mozilla/plugins/libnpsoplugin-dev.so
+
+	# fix soffice not starting without set environment
+	cd $startdir/pkg/opt/openoffice-dev/program/
+	patch -Np0 -i $startdir/src/soffice.diff
 }
