@@ -1,3 +1,7 @@
+openoffice-base-devel - 3.0_dev300_m10-1
+- back to system-cairo usage
+# - stoponerrors enabled (not yet working)
+
 openoffice-base-devel - 2.4_src680_m239-1
 - removed internal-no-db patch
 - fixed jvmfwk/gstreamer patches
